--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tag %>
+ <title>Pairbnb</title>
+   <%= csrf_meta_tags %>
+
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
-  <div id="header">
+
+<%= render partial: 'layouts/navbar' %>
+
+  <!-- <div id="header">
     <% if signed_in? -%>
       <%= button_to t(".sign_out"), sign_out_path, method: :delete %>
     <% else -%>
@@ -17,7 +26,7 @@
     <% flash.each do |key, value| -%>
       <div id="flash_<%= key %>"><%=h value %></div>
     <% end %>
-  </div>
+  </div> -->
 
   <%= yield %>
 </body>
