--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -20,6 +20,9 @@
 
 <p>Description: <%= @listing.description %></p>
 
+<p>Verification: <%= @listing.verification %></p>
+
+
 
 <p>
 <% if current_user && current_user.id == @listing.user.id %>
