--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -2,70 +2,116 @@
 
 
 <div class="text-field">
-<%= form.label :name %>
+<%= form.label :name, "Name:" %>
   <%= form.text_field :name %>
 </div>
 
 
+<br>
+
+
 <div class="text-field">
-<%= form.label :place_type %>
+<%= form.label :place_type, "Place type: " %>
   <%= form.text_field :place_type %>
 </div>
 
 
+<br>
+
+
 <div class="text-field">
-<%= form.label :property_type %>
+<%= form.label :property_type, "Property type: " %>
   <%= form.text_field :property_type %>
 </div>
 
 
+<br>
+
+
 <div class="text-field">
-<%= form.label :room_number %>
+<%= form.label :room_number, "Room number: " %>
   <%= form.number_field :room_number, min: "0"%>
 </div>
 
+
+<br>
+
+
 <div class="text-field">
-<%= form.label :bed_number %>
+<%= form.label :bed_number, "Bed number: " %>
   <%= form.number_field :bed_number, min: "0" %>
 </div>
 
+
+<br>
+
+
 <div class="text-field">
-<%= form.label :guest_number %>
+<%= form.label :guest_number, "Guest number: " %>
   <%= form.number_field :guest_number, min: "0" %>
 </div>
 
+
+<br>
+
+
 <div class="text-field">
-<%= form.label :country %>
+<%= form.label :country, "Country: " %>
   <%= form.text_field :country %>
 </div>
 
+
+<br>
+
+
+
 <div class="text-field">
-<%= form.label :state %>
+<%= form.label :state, "State: " %>
   <%= form.text_field :state %>
 </div>
 
+
+<br>
+
+
 <div class="text-field">
-<%= form.label :city %>
+<%= form.label :city, "City: " %>
   <%= form.text_field :city %>
 </div>
 
+
+<br>
+
+
 <div class="text-field">
-<%= form.label :zipcode %>
+<%= form.label :zipcode, "Zipcode: " %>
   <%= form.number_field :zipcode %>
 </div>
 
+
+<br>
+
+
 <div class="text-field">
-<%= form.label :address %>
+<%= form.label :address, "Address: " %>
   <%= form.text_field :address %>
 </div>
 
+
+<br>
+
+
 <div class="text-field">
-<%= form.label :price %>
+<%= form.label :price, "Price: " %>
   <%= form.number_field :price, min: "0" %>
 </div>
 
+
+<br>
+
+
 <div class="text-field">
-<%= form.label :description %>
+<%= form.label :description, "Description: " %>
   <%= form.text_area :description %>
 </div>
 
