--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,13 +1,36 @@
+  <div class="col-md-12">
+  <li class="list-group-item">
   <h2>Create a new listing / Become a Host</h2>
 
   <%= form_for @listing do |form| %>
     <%= render partial: '/listings/form', object: form %>
+    <br>
+
+
 
     <div class="submit-field">
-      <%= form.submit "Create a new listing / Become a Host" %>
+<div style="float: left;">
+    
+      <%= form.submit "Create a new listing" %> <% end %></div>
+
+      <div>
+      <%= button_to "Cancel", :back, :method => :get, style: "margin-left: 10px" %></div>    
+<br>
+    
+</div>
+
+
+
+
+
+</li>
+
+<br>
+<div class="other-links">
+       <%= link_to '<< Back to Main page', root_path %> 
     </div>
 <br>
-    <div class="other-links">
-       <%= link_to 'Back', root_path %>
-    </div>
-<% end %>
+
+</div>
+
+
