--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -20,15 +20,35 @@
 
 <p>Description: <%= @listing.description %></p>
 
-<p>Verification: <%= @listing.verification %></p>
+<p>Verification status: <%= @listing.verification %></p>
 
 
 
 <p>
-<% if current_user && current_user.id == @listing.user.id %>
-<%= link_to 'Edit your listing', edit_user_listing_path(current_user, @listing), class: "btn btn-primary" %></p>
-<p><%= link_to 'Delete your listing', user_listing_path(current_user, @listing), method: :delete, data: {confirm: 'Are you sure you want to delete this listing?'}, class: "btn btn-primary" %>
+<% if current_user && ((current_user.id == @listing.user.id) || current_user.superadmin?) %>
+<%= link_to 'Edit listing', edit_user_listing_path(current_user, @listing), class: "btn btn-primary" %></p>
+<p><%= link_to 'Delete listing', user_listing_path(current_user, @listing), method: :delete, data: {confirm: 'Are you sure you want to delete this listing?'}, class: "btn btn-primary" %>
 
 <% end %>
 </p>
+
+<p>
+	<% if @listing.unverified? && (current_user.moderator? || current_user.superadmin?) %>
+<%= link_to 'Verify listing', "/users/#{@listing.user_id}/listings/#{@listing.id}/verify", method: :post, data: {confirm: 'Are you sure you want to verify this listing?'}, class: "btn btn-success" %>
+<% end %>
+</p>
+
+<p>
+	<% if @listing.verified? && (current_user.moderator? || current_user.superadmin?) %>
+<%= link_to 'Unverify listing', "/users/#{@listing.user_id}/listings/#{@listing.id}/unverify", method: :post, data: {confirm: 'Are you sure you want to unverify this listing?'}, class: "btn btn-danger" %>
+<% end %>
+</p>
+
+
 <p>Hosted by: <%= link_to @listing.user.email, user_path(@listing.user) %></p>
+
+</li><br>
+ <div class="other-links">
+       <%= link_to '<< Back to Main page', root_path %>
+    </div>
+</div>
