--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -22,9 +22,12 @@
 
 <p>Verification status: <%= @listing.verification %></p>
 
+<p>Hosted by: <%= link_to @listing.user.email, user_path(@listing.user) %></p>
+
+<p><% if signed_in? %>
 
 
-<p>
+
 <% if current_user && ((current_user.id == @listing.user.id) || current_user.superadmin?) %>
 <%= link_to 'Edit listing', edit_user_listing_path(current_user, @listing), class: "btn btn-primary" %></p>
 <p><%= link_to 'Delete listing', user_listing_path(current_user, @listing), method: :delete, data: {confirm: 'Are you sure you want to delete this listing?'}, class: "btn btn-primary" %>
@@ -45,10 +48,18 @@
 </p>
 
 
-<p>Hosted by: <%= link_to @listing.user.email, user_path(@listing.user) %></p>
+
+
+<% end %>
+
+
+
+
+
 
 </li><br>
  <div class="other-links">
        <%= link_to '<< Back to Main page', root_path %>
     </div>
+    <br>
 </div>
