--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -2,7 +2,7 @@
   <li class="list-group-item">
     <h1>Edit your listing</h1>
 
-  		<%= form_for @listing do |form| %>
+  		<%= form_for @listing, html: { multipart: true } do |form| %>
     		<%= render partial: '/listings/form', object: form %>
         <br>
 
