--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -13,6 +13,8 @@
 		      
 					<div class="well">
 
+						<p><%= image_tag listing.image[0].to_s, class: "img-responsive", style: "border-radius: 5px;" %></p>
+
 						<h4><%= link_to listing.name, user_listing_path(listing.user, listing) %></h4>
 						<p>Location: <%= listing.country %>, <%= listing.city %></p>
 						<p>Description: <%= listing.description %></p>
