--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -2,7 +2,7 @@
   <li class="list-group-item">
   <h2>Create a new listing / Become a Host</h2>
 
-  <%= form_for @listing do |form| %>
+  <%= form_for @listing, html: { multipart: true } do |form| %>
     <%= render partial: '/listings/form', object: form %>
     <br>
 
