--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -9,7 +9,7 @@
 
 
     <div class="submit-field">
-<div style="float: left;">
+<div style="float: left">
     
       <%= form.submit "Create a new listing" %> <% end %></div>
 
