--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -116,13 +116,41 @@
 </div>
 
 
+
+
 <br>
+
+
 
 
 <div class="text-field">
 <%= form.label :image, "Upload photos: " %>
-  <%= form.file_field :image, multiple: true %>
+  <%= form.file_field :image, multiple: true, id: "fileupload" %>
 </div>
+
+
+
+<br>
+<div id="dvPreview"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <br>
@@ -134,11 +162,11 @@
 <p><b>Delete photos: </b></p>
 
 
-<% @listing.image.each do |image| %>
+<% @listing.image.each_with_index do |img, index| %>
 
-      <%= image_tag image.thumb.url %>
-      <%= form.label :remove_image, "Delete this photo" %>
-      <%= form.check_box :remove_image %>
+      <%= image_tag(img.thumb.url) %>
+      <%= link_to "Delete", listing_image_path(@listing, index), :method => :delete, data: { confirm: "Are you sure you want to delete this photo?" } %>
+      
       <br><br>
 
 <% end %>
@@ -146,3 +174,42 @@
 <% end %>
 
 </div>
+
+
+
+
+
+
+<script>
+
+ $(function () {
+    $("#fileupload").change(function () {
+        if (typeof (FileReader) != "undefined") {
+            var dvPreview = $("#dvPreview");
+            dvPreview.html("");
+            var regex = /^([a-zA-Z0-9\s_\\.\-:])+(.jpg|.jpeg|.gif|.png|.bmp)$/;
+            $($(this)[0].files).each(function () {
+                var file = $(this);
+                if (regex.test(file[0].name.toLowerCase())) {
+                    var reader = new FileReader();
+                    reader.onload = function (e) {
+                        var img = $("<img />");
+                        img.attr("style", "height:100px;width: 100px;margin:5px");
+                        img.attr("src", e.target.result);
+                        dvPreview.append(img);
+                    }
+                    reader.readAsDataURL(file[0]);
+                } else {
+                    alert(file[0].name + " is not a valid image file.");
+                    dvPreview.html("");
+                    return false;
+                }
+            });
+        } else {
+            alert("This browser does not support HTML5 FileReader.");
+        }
+    });
+});
+
+
+</script>
