--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -28,13 +28,36 @@
   <%= form.password_field :password %>
 </div>
 
-<br>
+<br><br>
 
 
 <div class="text-field">
 <%= form.label :avatar, "Upload photos: " %>
-  <%= form.file_field :avatar %>
+  <%= form.file_field :avatar, id: "avatar-upload" %>
+</div>
+<br>
+
+<div class="form-group">
+  <img id="img_prev" width=100 height=100 src="#" alt="your image" class="img-thumbnail hidden"/> <br/>
 </div>
 
+<script>
 
+$(function() {
+  function readURL(input) {
+    if (input.files && input.files[0]) {
+      var reader = new FileReader();
 
+      reader.onload = function (e) {
+        $('#img_prev').attr('src', e.target.result);
+      }
+      reader.readAsDataURL(input.files[0]);
+    }
+  }
+
+  $("#avatar-upload").change(function(){
+    $('#img_prev').removeClass('hidden');
+    readURL(this);
+  });
+});
+</script>
