--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
 No profile photo available.</p>
 <% else %>
 <br>
-<%= image_tag @user.avatar %>
+<%= image_tag @user.avatar, Style: "width: 200px; height: 200px;" %>
 
 	<% end %>
 </p>
@@ -26,7 +26,7 @@ No profile photo available.</p>
 
 
 
-
+<br>
 
 
 
