--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="text-field">
-<%= form.label :name, "Name:" %>
+<%= form.label :name, "Name: ", style: "width: 120px" %>
   <%= form.text_field :name %>
 </div>
 
@@ -11,7 +11,7 @@
 
 
 <div class="text-field">
-<%= form.label :place_type, "Place type: " %>
+<%= form.label :place_type, "Place type: ", style: "width: 120px" %>
   <%= form.text_field :place_type %>
 </div>
 
@@ -20,7 +20,7 @@
 
 
 <div class="text-field">
-<%= form.label :property_type, "Property type: " %>
+<%= form.label :property_type, "Property type: ", style: "width: 120px" %>
   <%= form.text_field :property_type %>
 </div>
 
@@ -29,7 +29,7 @@
 
 
 <div class="text-field">
-<%= form.label :room_number, "Room number: " %>
+<%= form.label :room_number, "Room number: ", style: "width: 120px" %>
   <%= form.number_field :room_number, min: "0"%>
 </div>
 
@@ -38,7 +38,7 @@
 
 
 <div class="text-field">
-<%= form.label :bed_number, "Bed number: " %>
+<%= form.label :bed_number, "Bed number: ", style: "width: 120px" %>
   <%= form.number_field :bed_number, min: "0" %>
 </div>
 
@@ -47,7 +47,7 @@
 
 
 <div class="text-field">
-<%= form.label :guest_number, "Guest number: " %>
+<%= form.label :guest_number, "Guest number: ", style: "width: 120px" %>
   <%= form.number_field :guest_number, min: "0" %>
 </div>
 
@@ -56,7 +56,7 @@
 
 
 <div class="text-field">
-<%= form.label :country, "Country: " %>
+<%= form.label :country, "Country: ", style: "width: 120px" %>
   <%= form.text_field :country %>
 </div>
 
@@ -66,7 +66,7 @@
 
 
 <div class="text-field">
-<%= form.label :state, "State: " %>
+<%= form.label :state, "State: ", style: "width: 120px" %>
   <%= form.text_field :state %>
 </div>
 
@@ -75,7 +75,7 @@
 
 
 <div class="text-field">
-<%= form.label :city, "City: " %>
+<%= form.label :city, "City: ", style: "width: 120px" %>
   <%= form.text_field :city %>
 </div>
 
@@ -84,7 +84,7 @@
 
 
 <div class="text-field">
-<%= form.label :zipcode, "Zipcode: " %>
+<%= form.label :zipcode, "Zipcode: ", style: "width: 120px" %>
   <%= form.number_field :zipcode %>
 </div>
 
@@ -93,7 +93,7 @@
 
 
 <div class="text-field">
-<%= form.label :address, "Address: " %>
+<%= form.label :address, "Address: ", style: "width: 120px" %>
   <%= form.text_field :address %>
 </div>
 
@@ -102,7 +102,7 @@
 
 
 <div class="text-field">
-<%= form.label :price, "Price: " %>
+<%= form.label :price, "Price: ", style: "width: 120px" %>
   <%= form.number_field :price, min: "0" %>
 </div>
 
@@ -111,7 +111,7 @@
 
 
 <div class="text-field">
-<%= form.label :description, "Description: " %>
+<%= form.label :description, "Description: ", style: "width: 120px" %>
   <%= form.text_area :description %>
 </div>
 
@@ -119,7 +119,7 @@
 
 
 <br>
-
+<br>
 
 
 
