--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <div class="col-md-12">
+<ul class="list-group">
   <li class="list-group-item">
 
 <h1><%= @user.email %></h1>
@@ -44,17 +45,45 @@ No profile photo available.</p>
 </p>
 
 
-
-
-
 <% end %>
 
+<br>
+
+
+</li>
+
+
+  <li class="list-group-item">
+
+
+<h3>My Listings</h3>
+
+<% @user.listings.each do |listing| %>
+		  		<div class="col-md-3">
+		      
+					<div class="well">
+
+						<p><%= image_tag listing.image[0].to_s, class: "img-responsive", style: "border-radius: 3px; " %></p>
+
+						<h4><%= link_to listing.name, user_listing_path(listing.user, listing) %></h4>
+						<p>Location: <%= listing.country %>, <%= listing.city %></p>
+						<p>Description: <%= listing.description %></p>
+
+					</div>
+				</div>
+			<% end %>
+		
 
 
 
 
 
-</li><br>
+</li>
+<br>
+
+
+
+
  <div class="other-links">
        <%= link_to '<< Back to Main page', root_path %>
     </div>
