--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -27,22 +27,90 @@
 
 <p>Photos: 
 
-<% if @listing.image[0].nil? %>
-There is no photo for this listing yet.</p>
-<% else %>
+<% if @listing.image.present? %>
 
-<p><% @listing.image.each do |image| %>
-<%= image_tag image, class: "img-responsive", style: "border-radius: 3px;"  %>
+There are <%= @listing.image.count %> photos uploaded for this listing. </p>
+
+
+
+
+
+
+
+
+
+
+<div style="min-width: 50%; max-width: 800px">
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+
+    <li data-target="#myCarousel" data-slide-to="0" class= "active" ></li>
+<% (1..@listing.image.count - 1).each do |i| %>
+     <li data-target="#myCarousel" data-slide-to=<%=i.to_s%>></li>
+     <% end %>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+    <%= image_tag @listing.image.first, class: "img-responsive center-block", style: "width:100%; height:100%;" %>
+    </div>
+    <% @listing.image.shift %>
+    <% @listing.image.each do |image| %>
+    <div class="item">
+      <%= image_tag image, class: "img-responsive center-block", style: "width:100%; height:100%;" %>
+    </div>
+    <% end %>
+
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+</div>
+
+
+
+
 <br><br>
+
+
+
+<p>View larger photos: </p>
+
+
+<p>
+<% @listing = Listing.find(params[:id]) %>
+<% @listing.image.each do |image| %>
+<%= image_tag image, class: "img-responsive", style: "border-radius: 3px;"  %><br>
+
 	<% end %>
 </p>
 
+
+
+
+
+<% else %>
+
+There is no photo for this listing yet.</p>
 <% end %>
 
 
 
 
-
+<br>
 
 
 
