--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -32,7 +32,7 @@
 
 
 <div class="text-field">
-<%= form.label :avatar, "Upload photos: " %>
+<%= form.label :avatar, "Upload photos: " %><br><br>
   <%= form.file_field :avatar, id: "avatar-upload" %>
 </div>
 <br>
