--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 
-<div class="col-md-12">
-  <li class="list-group-item">
+<div class="col-md-4 col-md-offset-4" >
+  <li class="list-group-item" style="text-align: center;">
 
 <div id="clearance" class="sign-up">
   <h2><%= t(".title") %></h2>
@@ -8,10 +8,10 @@
   <p>It's free and always will be.</p>
   
 <br>
-
+<div align="center">
   <%= form_for @user, html: { multipart: true } do |form| %>
     <%= render partial: '/users/form', object: form %>
-
+</div>
 
 <br>
 <p style="font-size: 90%">By clicking Sign up, you agree to our Terms and that you have read our Data Use Policy, including our Cookie Use.</p>
