--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -16,23 +16,63 @@
 
 <br>
 
-
-<div class="text-field">
-<%= form.label :start_date, "Check In: ", style: "width: 150px" %>
-  <%= form.date_field :start_date %>
+<%= form.label :start_date, "Check In: ", style: "float: left;" %>
+<div class="container">
+    <div class="row"> 
+        <div class='col-sm-2'>
+            <div class="form-group">
+                <div class='input-group date' id='datetimepicker1'>
+                    <%= form.text_field :start_date, class:"form-control" %>
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker1').datetimepicker({format: "DD/MM/YYYY" 
+                    });
+            });
+        </script>
+    </div>
 </div>
-
+              
 
 <br>
 
 
-<div class="text-field">
-<%= form.label :end_date, "Check Out: ", style: "width: 150px" %>
-  <%= form.date_field :end_date %>
-</div>
 
+
+
+<%= form.label :end_date, "Check Out: ", style: "float: left;" %>
+<div class="container">
+    <div class="row">
+        <div class='col-sm-2'>
+            <div class="form-group">
+                <div class='input-group date' id='datetimepicker2'>
+                    <%= form.text_field :end_date, class:"form-control" %>
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker2').datetimepicker({format: "DD/MM/YYYY" 
+                    });
+            });
+        </script>
+    </div>
+</div>
+              
 
 <br>
+
+
+
+
 
 
 <div class="submit-field" align="center">
