add payment for reservation

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import 'bootstrap-datetimepicker';
 @import "listings";
 @import "page";
+@import "braintree";
 
 
 
@@ -24,3 +25,8 @@
   background-color: #8b9dc3;
   color: #fff;
 }
+
+
+
+  
+    
