--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -33,6 +33,14 @@
 
 <p>Hosted by: <%= link_to @listing.user.email, user_path(@listing.user) %></p>
 
+<br> 
+
+<p>Location map:</p>
+<div class="google-maps"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.8517521297!2d101.62779131475729!3d3.133844997718065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc4939007dcd87%3A0x1f08990385cee5b8!2sNEXT+Academy+%7C+The+Best+Coding+School!5e0!3m2!1sen!2smy!4v1515652070334" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+
+<br>
+
+
 
 <p>Photos: 
 
