--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
-<div class="col-md-12">
+
+<div class="col-md-8 col-md-offset-2" >
   <li class="list-group-item">
     <h1>Edit your profile</h1>
 <br>
