--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -140,7 +140,7 @@ No profile photo available.</p>
 
 
 
-<% if current_user.id == @user.id %>
+<% if current_user && (current_user.id == @user.id) %>
 
 
 
