--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -31,15 +31,22 @@
           </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Enter a location">
+
+
+
+
+
+      
+
+
+  <%= form_tag(listings_path, method: "get", id: "search-form", enforce_utf8: false) do %>
+        <div class="input-group">
+          <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Enter a location" %>
+          <div class="input-group-btn">
+              <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span>Search</button>
+          </div>
         </div>
-        <button type="submit" class="btn btn-default">Search</button>
-      </form>
-
-
-
+  <% end %>
 
 
 
