--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -41,7 +41,7 @@
 
   <%= form_tag(listings_path, method: "get", id: "search-form", enforce_utf8: false) do %>
         
-          <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Enter a location", style: "width:150px" %>
+          <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Enter a location", style: "width:200px; float:left;" %>
           
               <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span>Search</button>
           
