--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -33,21 +33,20 @@
       </ul>
 
 
-
+    
 
 
       
 
-
+<form class="navbar-form navbar-left" role="search">
  <%= form_tag(listings_path, method: "get", id: "search-form", enforce_utf8: false) do %>
-        <div class="input-group">
-          <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Where do you want to go?" %>
-          <div class="input-group-btn">
-              <button class="btn" type="submit"><span class="glyphicon glyphicon-search"></span> <strong>Search</strong></button>
-          </div>
+        <div class="form-group">
+            <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Enter a location" %>
         </div>
+            <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span> Search</button>
+        
 <% end %>
-
+</form>
 
 
 
