add search feature

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -13,7 +13,7 @@
 <br>
 
 
-<p>Location: <%= @listing.address %>, <%= @listing.zipcode %>, <%= @listing.city %>, <%= @listing.country %></p>
+<p>Location: <%= @listing.address %>, <%= @listing.zipcode %>, <%= @listing.city %>, <%= @listing.state %>, <%= @listing.country %></p>
 
 <p>Place type: <%= @listing.place_type %></p>
 
