add search feature

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -45,7 +45,7 @@
 						<p><%= image_tag listing.image[0].to_s, class: "img-responsive", style: "border-radius: 3px; " %></p>
 
 						<h4><%= link_to listing.name, user_listing_path(listing.user, listing) %></h4>
-						<p>Location: <%= listing.country %>, <%= listing.city %></p>
+						<p>Location: <%= listing.country %>, <%= listing.state %>, <%= listing.city %></p>
 						<p>Description: <%= listing.description %></p>
 
 					</div>
