add search feature

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -23,7 +23,7 @@
 <% else %>
 <% if @index_title.present? %>
  	<div class="col-md-12">
- 	 	You search returned <%= @listings.count %> result(s).
+ 	 	Your search returned <%= @listings.count %> result(s).
     	</div>
     	<% end %>
     <div class="col-md-12", align="right">
